compiler-tests/src/test/data/diagnostic/dependencygraph/AllDuplicateBindingsAreReported.kt
// RUN_PIPELINE_TILL: FIR2IR
// RENDER_IR_DIAGNOSTICS_FULL_TEXT

@DependencyGraph
interface <!DUPLICATE_BINDING!>AppGraph<!> {
  // Accessor to actually use the String binding - duplicates are only reported for used bindings
  val string: String

  @Provides fun provideString1(): String = "1"
  @Provides fun provideString2(): String = "2"
  @Provides fun provideString3(): String = "3"
  @Provides fun provideString4(): String = "4"
  @Provides fun provideString5(): String = "5"
}
